make hero element

--- a/index.html
+++ b/index.html
@@ -44,5 +44,81 @@
                 </div>
             </div>
         </header>
+        <main>
+            <section class="hero">
+                <div class="container">
+                    <div class="center-y">
+                        <!-- Hero content -->
+                        <div class="hero__content">
+                            <h1 class="heading heading--large hero__heading">We’re a creative design agency.</h1>
+                            <p class="desc hero__desc">
+                                A brilliant, modular agency template for startup’s build yours toady.
+                            </p>
+                            <div class="hero__cta-block center-y">
+                                <a href="#!" class="btn">Get in touch</a>
+                                <a href="#!" class="watch-video-btn__outer center-y">
+                                    <button class="watch-video-btn">
+                                        <div class="watch-video-btn__inner">
+                                            <svg
+                                                width="0.8em"
+                                                height="1em"
+                                                viewBox="0 0 8 10"
+                                                fill="none"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                            >
+                                                <path
+                                                    d="M7.48979 4.22586C8.15106 4.61996 8.13773 5.58212 7.4658 5.95775L1.49682 9.29454C0.824887 9.67017 -0.00170366 9.17755 0.00896126 8.40782L0.103701 1.57014C0.114366 0.800411 0.954284 0.330874 1.61555 0.724974L7.48979 4.22586Z"
+                                                    fill="#FEF6FB"
+                                                />
+                                            </svg>
+                                        </div>
+                                    </button>
+                                    <span class="heading heading--smaller watch-video-btn__label">Watch Video</span>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Hero media -->
+                        <div class="hero__media">
+                            <!-- Hero img-block -->
+                            <figure class="hero__img-block">
+                                <div class="image img-block__image img-block__img-1"></div>
+                                <div class="image img-block__image img-block__img-2"></div>
+                                <div class="image img-block__image img-block__img-3"></div>
+                            </figure>
+
+                            <!-- Hero back ground -->
+
+                            <!-- Circle center -->
+                            <div class="hero__bg bg__circle-center"></div>
+
+                            <!-- Flower top -->
+                            <img
+                                src="./assets/icons/winding-line.svg"
+                                alt="winding line top"
+                                class="hero__bg bg__winding-line--top"
+                            />
+                            <img
+                                src="./assets/icons/asterisk.svg"
+                                alt="asterisk top"
+                                class="hero__bg bg__asterisk--top"
+                            />
+
+                            <!-- Flower bottom -->
+                            <img
+                                src="./assets/icons/winding-line.svg"
+                                alt="winding line bottom"
+                                class="hero__bg bg__winding-line--bottom"
+                            />
+                            <img
+                                src="./assets/icons/asterisk.svg"
+                                alt="asterisk bottom"
+                                class="hero__bg bg__asterisk--bottom"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
