make clients element

--- a/index.html
+++ b/index.html
@@ -119,6 +119,38 @@
                     </div>
                 </div>
             </section>
+            <section class="clients">
+                <div class="container">
+                    <ul class="clients-list center-y">
+                        <li class="client-item">
+                            <a href="#!" class="client-link client-link--google">
+                                <img class="client-img" src="./assets/img/Google.svg" alt="Google" />
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#!" class="client-link client-link--slack">
+                                <img class="client-img" src="./assets/img/Slack.svg" alt="Google" />
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#!" class="client-link client-link--agworld">
+                                <img class="client-img" src="./assets/img/Agworld-logo.svg" alt="Agworld" />
+                                <img class="client-img" src="./assets/img/Agworld-text.svg" alt="Agworld" />
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#!" class="client-link">
+                                <img class="client-img" src="./assets/img/RioTinto.svg" alt="RioTinto" />
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#!" class="client-link client-link--heroku">
+                                <img class="client-img" src="./assets/img/Heroku.svg" alt="Heroku" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
     </body>
 </html>
