make services element

--- a/index.html
+++ b/index.html
@@ -151,6 +151,108 @@
                     </ul>
                 </div>
             </section>
+            <section class="services padding-y">
+                <div class="container">
+                    <p class="label">OUR SERVICES</p>
+
+                    <!-- Services header -->
+                    <div class="services__header center-y">
+                        <h2 class="heading services__heading heading--has-tail">
+                            We offer a wide range of design services
+                        </h2>
+
+                        <!-- Services controls -->
+                        <div class="controls services__controls">
+                            <!-- prev -->
+                            <button class="control-btn">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="22"
+                                    height="13"
+                                    viewBox="0 0 22 13"
+                                    fill="none"
+                                >
+                                    <path
+                                        d="M21 6.82353H0.999999M0.999999 6.82353L6.29412 1M0.999999 6.82353L6.29412 12"
+                                        stroke="currentColor"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+
+                            <!-- next -->
+                            <button class="control-btn">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="22"
+                                    height="12"
+                                    viewBox="0 0 22 12"
+                                    fill="none"
+                                >
+                                    <path
+                                        d="M1 6.29412H21M21 6.29412L15.7059 1M21 6.29412L15.7059 11"
+                                        stroke="currentColor"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="services-list">
+                        <!-- Service item 1 -->
+                        <div class="service-item">
+                            <a href="#!">
+                                <figure>
+                                    <div class="image service-img service-img__img1"></div>
+                                </figure>
+                                <div class="service-info">
+                                    <a href="#!"><h3 class="heading heading--small line-clamp">Branding</h3></a>
+                                    <p class="desc desc--smaller service-info__desc line-clamp line-3">
+                                        Create beautiful Agency website with Boluethat converts more visitors than any
+                                        website.
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <!-- Service item 2 -->
+                        <div class="service-item">
+                            <a href="#!">
+                                <figure>
+                                    <div class="image service-img service-img__img2"></div>
+                                </figure>
+                                <div class="service-info">
+                                    <a href="#!"><h3 class="heading heading--small line-clamp">Web Design</h3></a>
+                                    <p class="desc desc--smaller service-info__desc line-clamp line-3">
+                                        Create beautiful Agency website with Boluethat converts more visitors than any
+                                        website.
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <!-- Service item 3 -->
+                        <div class="service-item">
+                            <a href="#!">
+                                <figure>
+                                    <div class="image service-img service-img__img3"></div>
+                                </figure>
+                                <div class="service-info">
+                                    <a href="#!"><h3 class="heading heading--small line-clamp">Graphic Design</h3></a>
+                                    <p class="desc desc--smaller service-info__desc line-clamp line-3">
+                                        Create beautiful Agency website with Boluethat converts more visitors than any
+                                        website.
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
