make about us element

--- a/index.html
+++ b/index.html
@@ -90,30 +90,30 @@
                             <!-- Hero back ground -->
 
                             <!-- Circle center -->
-                            <div class="hero__bg bg__circle-center"></div>
+                            <div class="absolute hero-bg__circle-center"></div>
 
                             <!-- Flower top -->
                             <img
                                 src="./assets/icons/winding-line.svg"
                                 alt="winding line top"
-                                class="hero__bg bg__winding-line--top"
+                                class="absolute hero-bg__winding-line--top"
                             />
                             <img
                                 src="./assets/icons/asterisk.svg"
                                 alt="asterisk top"
-                                class="hero__bg bg__asterisk--top"
+                                class="absolute hero-bg__asterisk--top"
                             />
 
                             <!-- Flower bottom -->
                             <img
                                 src="./assets/icons/winding-line.svg"
                                 alt="winding line bottom"
-                                class="hero__bg bg__winding-line--bottom"
+                                class="absolute hero-bg__winding-line--bottom"
                             />
                             <img
                                 src="./assets/icons/asterisk.svg"
                                 alt="asterisk bottom"
-                                class="hero__bg bg__asterisk--bottom"
+                                class="absolute hero-bg__asterisk--bottom"
                             />
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="services padding-y">
+            <section class="services padding-y-70">
                 <div class="container">
                     <p class="label">OUR SERVICES</p>
 
@@ -249,6 +249,77 @@
                                     </p>
                                 </div>
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="about" class="about-us">
+                <div class="container">
+                    <div class="about-us__body">
+                        <!-- About us media -->
+                        <div class="about-us__media">
+                            <figure class="about-us__img-block">
+                                <div class="image about-us__img about-us__img-1"></div>
+                                <div class="image about-us__img about-us__img-2"></div>
+                            </figure>
+                            <article class="about-us__designers-card">
+                                <header class="designers-card__header">
+                                    <p class="heading designers-card__title">All Designers</p>
+                                    <p class="designers-card__title--sub">Total Balance</p>
+                                    <p class="designers-card__desc">40%</p>
+                                    <div class="designers-card__process-bar"></div>
+                                    <p class="designers-card__desc designers-card__desc--right-align">Loading...</p>
+                                </header>
+                                <div class="designers-card__circle-icon"></div>
+                                <div class="designers-card__footer center-y">
+                                    <p class="designers-card__desc">Teams:</p>
+                                    <figure class="designers-card__avatar-block">
+                                        <div class="image designers-card__avatar designers-card__avatar-1"></div>
+                                        <div class="image designers-card__avatar designers-card__avatar-2"></div>
+                                        <div class="image designers-card__avatar designers-card__avatar-3"></div>
+                                        <div class="image designers-card__avatar designers-card__avatar-4"></div>
+                                    </figure>
+                                </div>
+                            </article>
+                            <!-- About us background -->
+                            <img
+                                src="./assets/icons/winding-line.svg"
+                                alt="winding line"
+                                class="absolute about-us-bg__winding-line"
+                            />
+                            <img
+                                src="./assets/icons/asterisk.svg"
+                                alt="asterisk"
+                                class="absolute about-us-bg__asterisk"
+                            />
+                        </div>
+
+                        <!-- About us content -->
+                        <div class="about-us__content">
+                            <p class="label">ABOUT US</p>
+                            <h2 class="heading about-us__heading">We are an extension of your creative team</h2>
+                            <p class="desc desc--small">
+                                At the start of every project, we customize detailed project plan together with you set
+                                expectations ensure alignment and define key milestones and deliverables.
+                            </p>
+
+                            <!-- About us stats -->
+                            <div class="about-us__stats">
+                                <div class="about-us__stat">
+                                    <strong class="heading">48%</strong>
+                                    <p class="desc desc--smaller">
+                                        Are you strive for two things in design simplicity and clarity. Great design is
+                                        born of those two things
+                                    </p>
+                                </div>
+                                <div class="about-us__stat">
+                                    <strong class="heading">26%</strong>
+                                    <p class="desc desc--smaller">
+                                        Are you strive for two things in design simplicity and clarity. Great design is
+                                        born of those two things
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
