--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
                             </p>
                             <div class="hero__cta-block center-y">
                                 <a href="#!" class="btn">Get in touch</a>
-                                <a href="#!" class="watch-video-btn__outer center-y">
-                                    <button class="watch-video-btn">
-                                        <div class="watch-video-btn__inner">
+                                <a href="#!" class="hero__play-btn center-y">
+                                    <!-- watch video btn -->
+                                    <button class="hero__play-btn--half--circle">
+                                        <div class="hero__play-btn--circle">
                                             <svg
                                                 width="0.8em"
                                                 height="1em"
@@ -73,7 +74,7 @@
                                             </svg>
                                         </div>
                                     </button>
-                                    <span class="heading heading--smaller watch-video-btn__label">Watch Video</span>
+                                    <span class="heading heading--smaller hero__play-btn__label">Watch Video</span>
                                 </a>
                             </div>
                         </div>
