make process element

--- a/index.html
+++ b/index.html
@@ -325,6 +325,61 @@
                     </div>
                 </div>
             </section>
+            <section class="process">
+                <div class="container">
+                    <p class="label process__label">OUR PROCESS</p>
+                    <h2 class="heading process__heading heading--has-tail">
+                        A simple ,yet effective three step process
+                    </h2>
+                    <ol class="process__list">
+                        <!-- Process step 1 -->
+                        <li class="process-step center-y">
+                            <strong class="process-step__num">01.</strong>
+                            <div class="process-step__center">
+                                <a href="#!"><h3 class="heading heading--small">Project idea</h3></a>
+                                <a href="#!" class="desc process__desc--learn-more">Learn More</a>
+                            </div>
+                            <div class="process-step__right">
+                                <p class="desc process__desc">
+                                    We customize a ensure alignment and define key milestones and deliverables
+                                    experience tells us the best solutions are the ones dealing with clients.
+                                </p>
+                                <div class="image process-step__img"></div>
+                            </div>
+                        </li>
+                        <!-- Process step 2 -->
+                        <li class="process-step center-y">
+                            <strong class="process-step__num">02.</strong>
+                            <div class="process-step__center">
+                                <a href="#!"><h3 class="heading heading--small">Brainstorming</h3></a>
+                                <a href="#!" class="desc process__desc--learn-more">Learn More</a>
+                            </div>
+                            <div class="process-step__right">
+                                <p class="desc process__desc">
+                                    We customize a ensure alignment and define key milestones and deliverables
+                                    experience tells us the best solutions are the ones dealing with clients.
+                                </p>
+                                <div class="image process-step__img"></div>
+                            </div>
+                        </li>
+                        <!-- Process step 3 -->
+                        <li class="process-step center-y">
+                            <strong class="process-step__num">03.</strong>
+                            <div class="process-step__center">
+                                <a href="#!"><h3 class="heading heading--small">Execution</h3></a>
+                                <a href="#!" class="desc process__desc--learn-more">Learn More</a>
+                            </div>
+                            <div class="process-step__right">
+                                <p class="desc process__desc">
+                                    We customize a ensure alignment and define key milestones and deliverables
+                                    experience tells us the best solutions are the ones dealing with clients.
+                                </p>
+                                <div class="image process-step__img"></div>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </section>
         </main>
     </body>
 </html>
