--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body style="height: 6000px">
         <header class="header sticky">
             <div class="container">
-                <div class="header__inner center-y">
+                <div class="header__inner flex-center-between">
                     <!-- Logo -->
                     <a href="#" class="header__logo">
                         <img src="./assets/img/logo.svg" alt="Shine smile" />
@@ -47,7 +47,7 @@
         <main>
             <section class="hero">
                 <div class="container">
-                    <div class="center-y">
+                    <div class="flex-center-between">
                         <!-- Hero content -->
                         <div class="hero__content">
                             <h1 class="heading heading--large hero__heading">We’re a creative design agency.</h1>
@@ -122,7 +122,7 @@
             </section>
             <section class="clients">
                 <div class="container">
-                    <ul class="clients-list center-y">
+                    <ul class="clients-list flex-center-between">
                         <li class="client-item">
                             <a href="#!" class="client-link client-link--google">
                                 <img class="client-img" src="./assets/img/Google.svg" alt="Google" />
@@ -157,7 +157,7 @@
                     <p class="label">OUR SERVICES</p>
 
                     <!-- Services header -->
-                    <div class="services__header center-y">
+                    <div class="services__header flex-center-between">
                         <h2 class="heading services__heading heading--has-tail">
                             We offer a wide range of design services
                         </h2>
@@ -272,7 +272,7 @@
                                     <p class="designers-card__desc designers-card__desc--right-align">Loading...</p>
                                 </header>
                                 <div class="designers-card__circle-icon"></div>
-                                <div class="designers-card__footer center-y">
+                                <div class="designers-card__footer flex-center-between">
                                     <p class="designers-card__desc">Teams:</p>
                                     <figure class="designers-card__avatar-block">
                                         <div class="image designers-card__avatar designers-card__avatar-1"></div>
@@ -378,6 +378,55 @@
                             </div>
                         </li>
                     </ol>
+                </div>
+            </section>
+            <section class="project">
+                <div class="container">
+                    <!-- Project header -->
+                    <div class="project-header flex-center-between">
+                        <h2 class="heading heading--light heading--has-tail project__heading">
+                            A quick glance of our past projects
+                        </h2>
+                        <div class="project-header__right">
+                            <p class="desc desc--light">
+                                Are you strive for the fast project simplicity and clarity. Great design is born of
+                                those two things.
+                            </p>
+                            <a href="#!" class="project-header__right-bottom">
+                                <p class="desc desc--link project__desc">Browse all Projects</p>
+                                <img src="./assets/icons/arrow-right.svg" alt="Arrow right" />
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Project video -->
+                    <div class="project-body">
+                        <figure class="project-video__wrapper">
+                            <iframe
+                                class="project-video"
+                                width="100%"
+                                height="100%"
+                                src="https://www.youtube.com/embed/pivcZQ0OzNg"
+                                title="Hai thanh niên trộm trứng rồng"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin"
+                                allowfullscreen
+                            >
+                            </iframe>
+                            <input type="checkbox" id="hide-thumb" class="project__play-btn" />
+                            <!-- Project video thumb -->
+                            <div class="image project-video__thumb"></div>
+                        </figure>
+
+                        <!-- Project background -->
+                        <img
+                            src="./assets/icons/project-winding-line.svg"
+                            alt="winding line"
+                            class="absolute project-bg__winding-line"
+                        />
+                        <img src="./assets/icons/asterisk.svg" alt="asterisk" class="absolute project-bg__asterisk" />
+                    </div>
                 </div>
             </section>
         </main>
