--- a/index.html
+++ b/index.html
@@ -429,6 +429,46 @@
                     </div>
                 </div>
             </section>
+            <section class="features padding-y-70">
+                <div class="container">
+                    <h2 class="heading features__heading">Share the features that help your customers</h2>
+                    <p class="desc desc--small features__desc">
+                        You already know that the customer experience doesn't end with a sale — it's an ongoing work in
+                        progress that companies should be constantly seeking to improve and iterate on.
+                    </p>
+                    <div class="features-list">
+                        <!-- Feature item 1 -->
+                        <div class="feature-item">
+                            <img src="./assets/icons/paper-pen.svg" alt="blog icon" />
+                            <p class="heading feature-item__heading">Blog</p>
+                            <p class="desc desc--smaller line-clamp line-5 feature-item__desc">
+                                We’ve researched numerous agencies and complied a list of digital marketing agency blogs
+                                you should read to stay ahead of your rivals and succeed online!
+                            </p>
+                        </div>
+
+                        <!-- Feature item 2 -->
+                        <div class="feature-item">
+                            <img src="./assets/icons/memo-circle-check.svg" alt="documentation icon" />
+                            <p class="heading feature-item__heading">Documentation</p>
+                            <p class="desc desc--smaller line-clamp line-5 feature-item__desc">
+                                In this article, we discuss the different types of documentation, what makes for great
+                                technical documentation, and provide examples.
+                            </p>
+                        </div>
+
+                        <!-- Feature item 3 -->
+                        <div class="feature-item">
+                            <img src="./assets/icons/people-group.svg" alt="customers icon" />
+                            <p class="heading feature-item__heading">Customers</p>
+                            <p class="desc desc--smaller line-clamp line-5 feature-item__desc">
+                                Your customers have high expectations — and if your business can't meet them, they're
+                                going to leave you for your competitors.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
