make blog element

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Styles -->
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
-    <body style="height: 6000px">
+    <body style="height: 7000px">
         <header class="header sticky">
             <div class="container">
                 <div class="header__inner flex-center-between">
@@ -466,6 +466,74 @@
                                 going to leave you for your competitors.
                             </p>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section id="blog" class="blog-section padding-y-70">
+                <div class="container">
+                    <div class="label">BLOG & ARTICLES</div>
+                    <div class="blog-header flex-center-between">
+                        <h2 class="heading heading--has-tail blog-header__heading">
+                            Take a look at our latest articles and resources
+                        </h2>
+                        <p class="desc desc--small blog-header__desc">
+                            The best agency are the ones ideated with clients. we corporate your ideas with memorable
+                        </p>
+                    </div>
+                    <div class="blog-lists">
+                        <!-- Blog item 1 -->
+                        <article class="blog-item">
+                            <figure>
+                                <a href="#!"><div class="image blog-item__img blog-item__img-1"></div></a>
+                            </figure>
+                            <div class="blog-item__info">
+                                <div class="blog-item__info-top">
+                                    <a href="#!" class="blog-item__btn">STORIES</a>
+                                    <a href="#!">
+                                        <h3 class="heading heading--smaller line-clamp line-3">
+                                            What did we learn from running over 100 design sprints in less the year?
+                                        </h3>
+                                    </a>
+                                </div>
+                                <div class="blog-item__info-bottom">JANUARY 29, 2022</div>
+                            </div>
+                        </article>
+
+                        <!-- Blog item 2 -->
+                        <article class="blog-item">
+                            <figure>
+                                <a href="#!"><div class="image blog-item__img blog-item__img-2"></div></a>
+                            </figure>
+                            <div class="blog-item__info">
+                                <div class="blog-item__info-top">
+                                    <a href="#!" class="blog-item__btn">STORIES</a>
+                                    <a href="#!">
+                                        <h3 class="heading heading--smaller line-clamp line-3">
+                                            The difference between the UI/UX design a simple guide for beginner’s
+                                        </h3>
+                                    </a>
+                                </div>
+                                <div class="blog-item__info-bottom">JANUARY 29, 2022</div>
+                            </div>
+                        </article>
+
+                        <!-- Blog item 3 -->
+                        <article class="blog-item">
+                            <figure>
+                                <a href="#!"><div class="image blog-item__img blog-item__img-3"></div></a>
+                            </figure>
+                            <div class="blog-item__info">
+                                <div class="blog-item__info-top">
+                                    <a href="#!" class="blog-item__btn">STORIES</a>
+                                    <a href="#!">
+                                        <h3 class="heading heading--smaller line-clamp line-3">
+                                            The difference between the UI/UX design a simple guide for beginner’s
+                                        </h3>
+                                    </a>
+                                </div>
+                                <div class="blog-item__info-bottom">JANUARY 29, 2022</div>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </section>
