make footer element and add favicon

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
         />
 
         <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon" />
+        <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png" />
+        <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/android-icon-192x192.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
+        <link rel="manifest" href="./assets/favicon/manifest.json" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png" />
+        <meta name="theme-color" content="#ffffff" />
 
         <!-- Reset -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
@@ -21,7 +38,7 @@
         <!-- Styles -->
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
-    <body style="height: 7000px">
+    <body>
         <header class="header sticky">
             <div class="container">
                 <div class="header__inner flex-center-between">
@@ -538,5 +555,127 @@
                 </div>
             </section>
         </main>
+        <footer id="contact" class="footer">
+            <div class="container">
+                <div class="footer-row">
+                    <!-- Footer column left -->
+                    <div class="footer-left">
+                        <p class="footer__title">Sign up for our newsletter</p>
+
+                        <!-- Footer form -->
+                        <form action="#!" class="footer__form center-y">
+                            <input
+                                type="email"
+                                id="email"
+                                name="email"
+                                class="footer__email"
+                                placeholder="Enter your email"
+                            />
+                            <button type="submit" class="footer__submit">
+                                <img src="./assets/icons/footer-arrow-right.svg" alt="" />
+                            </button>
+                        </form>
+
+                        <!-- Footer socials -->
+                        <div class="footer__socials">
+                            <!-- Facebook -->
+                            <a href="#!" class="footer__social">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="9"
+                                    height="22"
+                                    viewBox="0 0 9 22"
+                                    fill="none"
+                                >
+                                    <path
+                                        d="M1.84014 21.5406H5.80506V9.63262H8.51349V6.51323H5.80506V5.88935C5.80506 4.20759 6.44726 3.61084 8.34595 3.66509V0.464327C3.99013 0.355826 1.84014 2.06471 1.84014 5.75373V6.51323H0.0810547V9.63262H1.84014V21.5406Z"
+                                        fill="currentColor"
+                                    />
+                                </svg>
+                            </a>
+
+                            <!-- instagram -->
+                            <a href="#!" class="footer__social">
+                                <svg
+                                    width="52"
+                                    height="52"
+                                    viewBox="0 0 52 52"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <rect
+                                        x="17.8652"
+                                        y="17.8647"
+                                        width="16.2703"
+                                        height="16.2703"
+                                        rx="2"
+                                        stroke="currentColor"
+                                        stroke-width="2"
+                                    />
+                                    <circle cx="25.9998" cy="25.9998" r="3.01351" stroke="currentColor" />
+                                </svg>
+                            </a>
+
+                            <!-- twitter -->
+                            <a href="#!" class="footer__social">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="16"
+                                    height="12"
+                                    viewBox="0 0 16 12"
+                                    fill="none"
+                                >
+                                    <path
+                                        d="M16 1.42062C15.405 1.66154 14.771 1.82123 14.11 1.89877C14.79 1.524 15.309 0.935077 15.553 0.225231C14.919 0.574154 14.219 0.820615 13.473 0.958154C12.871 0.366462 12.013 0 11.077 0C9.261 0 7.799 1.36062 7.799 3.02862C7.799 3.26862 7.821 3.49938 7.875 3.71908C5.148 3.59631 2.735 2.38985 1.114 0.552C0.831 1.00523 0.665 1.524 0.665 2.08246C0.665 3.13108 1.25 4.06062 2.122 4.59877C1.595 4.58954 1.078 4.44831 0.64 4.22585C0.64 4.23508 0.64 4.24708 0.64 4.25908C0.64 5.73046 1.777 6.95262 3.268 7.23415C3.001 7.30154 2.71 7.33385 2.408 7.33385C2.198 7.33385 1.986 7.32277 1.787 7.28215C2.212 8.48123 3.418 9.36277 4.852 9.39138C3.736 10.1972 2.319 10.6828 0.785 10.6828C0.516 10.6828 0.258 10.6717 0 10.6412C1.453 11.5062 3.175 12 5.032 12C11.068 12 14.368 7.38462 14.368 3.384C14.368 3.25015 14.363 3.12092 14.356 2.99262C15.007 2.56615 15.554 2.03354 16 1.42062Z"
+                                        fill="currentColor"
+                                    />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Footer column right -->
+                    <div class="footer-right">
+                        <!-- Footer right column 1 -->
+                        <div class="footer-right__column">
+                            <p class="column-right__heading">Pages</p>
+                            <a href="#!" class="column-right__link">Home</a>
+                            <a href="#!" class="column-right__link">About</a>
+                            <a href="#!" class="column-right__link">Blog</a>
+                            <a href="#!" class="column-right__link">Blog Post</a>
+                        </div>
+
+                        <!-- Footer right column 2 -->
+                        <div class="footer-right__column">
+                            <p class="column-right__heading">Product</p>
+                            <a href="#!" class="column-right__link">Home</a>
+                            <a href="#!" class="column-right__link">About</a>
+                            <a href="#!" class="column-right__link">Blog</a>
+                            <a href="#!" class="column-right__link">Blog Post</a>
+                        </div>
+
+                        <!-- Footer right column 3 -->
+                        <div class="footer-right__column">
+                            <p class="column-right__heading">Overview</p>
+                            <a href="#!" class="column-right__link">Home1</a>
+                            <a href="#!" class="column-right__link">Home2</a>
+                            <a href="#!" class="column-right__link">Home3</a>
+                            <a href="#!" class="column-right__link">Pricing1</a>
+                        </div>
+
+                        <!-- Footer right column 4 -->
+                        <div class="footer-right__column">
+                            <p class="column-right__heading">About us</p>
+                            <a href="#!" class="column-right__link">Team</a>
+                            <a href="#!" class="column-right__link">Investors</a>
+                            <a href="#!" class="column-right__link">Blog</a>
+                            <a href="#!" class="column-right__link">Press</a>
+                        </div>
+                    </div>
+                    <div class="footer__separate"></div>
+                </div>
+                <p class="footer__copyright">© Copyright 2025 by TB.Nhan All right reserved.</p>
+            </div>
+        </footer>
     </body>
 </html>
