refine Process and Project sections and reduce image size

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <div class="container">
                     <!-- Project header -->
                     <div class="project-header flex-center-between">
-                        <h2 class="heading heading--light heading--has-tail project__heading">
+                        <h2 class="heading heading--light project__heading heading--has-tail">
                             A quick glance of our past projects
                         </h2>
                         <div class="project-header__right">
